--- a/si446x/DoorCard_Firmware_0.2.ioc
+++ b/si446x/DoorCard_Firmware_0.2.ioc
@@ -33,19 +33,20 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F070F6Px
 MxCube.Version=4.27.0
 MxDb.Version=DB.4.0.270
-NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=LED_RED
 PA0.Locked=true
 PA0.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=SW3
+PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPXTI1
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -93,8 +94,9 @@ PCC.Seq0=0
 PCC.Series=STM32F0
 PCC.Temperature=25
 PCC.Vdd=3.6
-PF0-OSC_IN.GPIOParameters=GPIO_Label
+PF0-OSC_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF0-OSC_IN.GPIO_Label=SW2
+PF0-OSC_IN.GPIO_PuPd=GPIO_PULLDOWN
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Signal=GPXTI0
 PF1-OSC_OUT.GPIOParameters=GPIO_Label
